--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
             "url": "http://localhost/projects/thegoat/index.html",
+        },
+       
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Open styler.html",
+            "url": "http://localhost/projects/thegoat/styler.html",
         }
     ]
 }
