restart with iframes basic principles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,12 +18,20 @@
             "request": "launch",
             "name": "Open colors.html",
             "url": "http://localhost/projects/thegoat/colors.html",
-        }
+        },
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open sizes.html",
             "url": "http://localhost/projects/thegoat/sizes.html",
+        },
+
+      {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Open test.html",
+            "url": "http://localhost/projects/thegoat/test.html",
         }
+
     ]
 }
